tune personal info

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="container">
         <div class="row">
             <div  class="col s12">
-                <h2 class="center header text_h2">This page is currently under construction, <span class="span_h2">Keep tune.</span>精彩<span class="span_h2">即将展现</span> </h2>
+                <h2 class="center header text_h2">This page is currently under construction, <span class="span_h2">Keep tune.</span> </br> 精彩<span class="span_h2">即将展现</span> </h2>
             </div>
 
             <div  class="col s12 m4 l4">
@@ -318,22 +318,22 @@
                 <ul>
                     <li>
                         <a class="white-text" href="http://stackoverflow.com/users/4730119">
-                            <i class="small fa fa-stack-overflow-square white-text"></i> Github
+                            <i class="small fa fa-stack-overflow white-text"></i> StackOverFlow
                         </a>
                     </li>
                     <li>
                         <a class="white-text" href="http://weibo.com/5227699532">
-                            <i class="small fa fa-weibo-square white-text"></i> Behance
+                            <i class="small fa fa-weibo white-text"></i> 微博
                         </a>
                     </li>
                     <li>
                         <a class="white-text" href="https://www.twitter.com/yaodis">
-                            <i class="small fa fa-twitter-square white-text"></i> Facebook
+                            <i class="small fa fa-twitter white-text"></i> Twitter
                         </a>
                     </li>
                     <li>
                         <a class="white-text" href="https://github.com/yaodis">
-                            <i class="small fa fa-github-square white-text"></i> Github
+                            <i class="small fa fa-github white-text"></i> Github
                         </a>
                     </li>
                 </ul>
