--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <ul>
                     <li>
                         <a class="white-text" href="http://stackoverflow.com/users/4730119">
-                            <i class="small fa fa-stack-overflow white-text"></i> StackOverFlow
+                            <i class="small fa fa-stack-overflow fa-stack-1x white-text"></i> StackOverFlow
                         </a>
                     </li>
                     <li>
