--- a/index.html
+++ b/index.html
@@ -318,22 +318,22 @@
                 <ul>
                     <li>
                         <a class="white-text" href="http://stackoverflow.com/users/4730119">
-                            <i class="small fa fa-stack-overflow fa-stack-1x white-text"></i> StackOverFlow
+                            <i class="small fa fa-stack-overflow fa-1 white-text"></i>&nbsp; StackOverFlow
                         </a>
                     </li>
                     <li>
                         <a class="white-text" href="http://weibo.com/5227699532">
-                            <i class="small fa fa-weibo white-text"></i> 微博
+                            <i class="small fa fa-weibo white-text"></i>&nbsp; 微博
                         </a>
                     </li>
                     <li>
                         <a class="white-text" href="https://www.twitter.com/yaodis">
-                            <i class="small fa fa-twitter white-text"></i> Twitter
+                            <i class="small fa fa-twitter white-text"></i>&nbsp; Twitter
                         </a>
                     </li>
                     <li>
                         <a class="white-text" href="https://github.com/yaodis">
-                            <i class="small fa fa-github white-text"></i> Github
+                            <i class="small fa fa-github white-text"></i>&nbsp; Github
                         </a>
                     </li>
                 </ul>
